--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -2,8 +2,11 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+body {
+  background-color: #eee;
+}
+
 #app {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
@@ -20,18 +23,5 @@ a,
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
   }
 }
